# eta-engine

./: CMakeLists.txt  plasma-engine-userinfo.desktop  userinfoengine.cpp  userinfoengine.h
debian/: changelog  control  copyright
